<resources>
    <string name="app_name">Znany konsultant</string>

    <!-- Main Page    -->
    <string name="name_edit">nazwisko</string>
    <string name="city_edit">miasto</string>
    <string name="btn_search">Szukaj</string>
    <string name="speciality_header">Wybierz specjalizację</string>
    <string name="main_page_title">Znajdź swojego konsultanata</string>
    <string name="main_page_subtitle">Szukaj wśród &#8734; ilości konsultantów</string>

    <string-array name="specialities">
        <item>IT</item>
        <item>tba</item>
        <item>tba</item>
        <item>tba</item>
        <item>tba</item>
    </string-array>

    <string name="log_into">Zaloguj się</string>
    <string name="login">Login</string>
    <string name="password">Hasło</string>
    <string name="register">Zarejestruj się</string>
    <string name="initial_search_hint">Wyszukaj</string>
    <string name="main_page">Strona główna</string>
    <string name="chats">Wiadomości</string>
    <string name="appointments">Spotkania</string>
    <string name="profile">Profil</string>
    <string name="rearch">Szukaj</string>
    <string name="favourites">Ulubieni</string>

    <string-array name="category">
        <item>Wybierz</item>
        <item>Kategoria 1</item>
        <item>Kategoria 2</item>
        <item>Kategoria 3</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="app_label">app label</string>
    <string name="search_hint">Szukaj...</string>
    <string name="filter">filtruj</string>
    <string name="sort_by">sortuj według</string>
    <string name="by_rating">ocena</string>
    <string name="by_price_asc">cena rosnąco</string>
    <string name="by_price_desc">cena malejąco</string>
    <string name="by_availability">dostępność</string>
    <string name="filters">filtry</string>
    <string name="meeting_tim">godziny spotkania</string>
    <string name="city">miejscowość</string>
    <string name="morning_hours">poranne (06:00 - 12:00)</string>
    <string name="afternoon_hours">popołudniowe (12:00 - 17:00)</string>
    <string name="price_per_hour_min">cena za godzinę od</string>
    <string name="price_per_hour_max">cena za godzinę do</string>
    <string name="evening_hours">wieczorne (17:00 - 21:00)</string>
    <string name="pln">pln</string>
    <string name="hundred">100,00</string>
    <string name="zero">0,00</string>
    <string name="category">kategoria</string>
    <string name="it">IT</string>
    <string name="finance_and_accountancy">finanse i rachunkowość</string>
    <string name="business">biznes</string>
    <string name="confirm">zatwierdź</string>
    <string name="marceting">marketing</string>
    <string name="consultant_photo">zdjęcie konsultanta</string>
    <string name="send">Wyślij</string>
    <string name="write_message">Napisz wiadomość</string>
    <string name="todo">TODO</string>
    <string name="services">Usługi</string>
    <!-- Appointments -->
    <string name="app_consultant">Konsultant</string>
    <string name="app_client">Klient</string>
    <string name="see_visitors">Zobacz zasięgi</string>
    <string name="date_info">Wybierz datę</string>
    <string name="time_info">Początek</string>
    <string name="time_info_2">Koniec</string>
    <string name="add_visit">Zapisz się</string>
    <string name="delete_visit">Anuluj wizytę</string>
    <string name="ask_for_new">Poproś o zmianę terminu</string>
    <string name="working_hours">Godziny pracy</string>
    <string name="add_working_hours">Dodaj godziny pracy</string>
    <string name="add">Dodaj</string>
    <string name="day_with_colon">Dzień :</string>
    <string name="start_with_colon">Start :</string>
    <string name="stop_with_colon">Koniec :</string>
    <string name="choose_day">Wybierz dzień</string>
    <string name="choose_hour">Wybierz godzinę</string>
    <string name="dash">-</string>
    <string name="delete">Usuń</string>
    <string name="hours">Godziny</string>
    <string name="edit">Edytuj</string>
    <string name="consult_type">Typ konsultacji</string>
    <string name="btn_back">Wróć</string>
    <string name="add_service">Dodaj usługę</string>
    <string name="add_service_type">typ</string>
    <string name="add_service_description">opis</string>
    <string name="add_service_add">dodaj</string>
    <string name="add_service_price">cena</string>
    <string name="consultant_profile_name">imię</string>
    <string name="consultant_profile_surname">nazwisko</string>
    <string name="consultant_profile_email">email</string>
    <string name="consultant_profile_phone">nr telefonu</string>
    <string name="consultant_profile_desc">opis</string>
    <string name="consultant_profile_website">strona internetowa</string>
    <string name="service_edit">Edycja usługi</string>
    <string name="service_edit_type">typ</string>
    <string name="service_edit_desc">opis</string>
    <string name="service_edit_save">Zapisz</string>
    <string name="service_edit_price">cena</string>
    <string name="forgot_password">Zapomniałem hasła</string>
    <string name="log_in_forgot_pass">Zapomniałem hasła</string>
    <string name="opinion_title">Tytuł</string>
    <string name="Your_opinion">Twoja opinia!</string>
    <string name="opinion_delete">Usuń</string>
    <string name="opinion_save">Zapisz</string>
    <string name="create_account">Załóż konto</string>
    <string name="user">Użytkownik</string>
    <string name="consultant">Konsultant</string>
    <string name="appointment_come_back">Wróć</string>
    <string name="appointment_consultant">Konsultant</string>
    <string name="appointment_date">Data</string>
    <string name="appointment_title">Twoja wizyta</string>
    <string name="appointment_name">Tu będzie imie</string>
    <string name="appointment_surname">Tu będzie nazwisko</string>
    <string name="appointment_type">Typ konsultacji</string>
    <string name="appointment_text">TextView</string>
    <string name="consultant_view_make_app">Umów się</string>
    <string name="consultant_view_opinion">OPINIA</string>
    <string name="consultant_view_chat">Czat</string>
    <string name="appointment_consultant_come_back">Wróć</string>
    <string name="appointment_consultant_delete">Anuluj wizytę</string>
    <string name="appointment_consultant_client">Klient</string>
    <string name="appointment_consultant_place">Miejsce</string>
    <string name="appointment_consultant_date">Data</string>
    <string name="appointment_consultant_your_visit">Twoja wizyta</string>
    <string name="appointment_consultant_city">Tu będzie miejsce</string>
    <string name="appointment_consultant_modify">Modyfikuj</string>
    <string name="appointment_consultant_confirm">Zatwierdź</string>
    <string name="appointment_consultant_confirmed">Potwiedzono</string>
    <string name="cons_name">imię</string>
    <string name="cons_surname">nazwisko</string>
    <string name="cons_phone">nr telefonu</string>
    <string name="cons_page">strona</string>
    <string name="cons_email">email</string>
    <string name="cons_desc">opis</string>
    <string name="cons_save">Zapisz zmiany</string>
    <string name="cons_register_name">imię</string>
    <string name="cons_register_surname">nazwisko</string>
    <string name="cons_register_email">email</string>
    <string name="cons_register_phone">numer telefonu</string>
    <string name="cons_register_pass">hasło</string>
    <string name="cons_register_repeat">powtórz hasło</string>
    <string name="cons_register_city">miasto</string>
    <string name="cons_register_sign">Zarejestruj</string>
    <string name="your_services">Twoje usługi</string>
    <string name="search_fragment">search fragment</string>
    <string name="work_hours">Godziny pracy</string>
    <string name="occupied_hours">Niedostępne terminy</string>
    <string name="service_category">Kategoria usług</string>
    <string name="your_visit">Twoja wizyta</string>

</resources>
